@@ -18,6 +18,7 @@
       static method FD_SET : void ($fd : int, $set : Sys::IO::Fd_set);
       static method FD_CLR : void ($fd : int, $set : Sys::IO::Fd_set);
       static method FD_ISSET : int ($fd : int, $set : Sys::IO::Fd_set);
+      static method select : int ($nfds : int, $readfds : Sys::IO::Fd_set, $writefds : Sys::IO::Fd_set, $exceptfds : Sys::IO::Fd_set, $timeout : Sys::Time::Timeval);
       
     * Added the following methods to Sys::FileTest class.
     
